# pixel-campus

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
assets/sprites/Modern tiles_Free/Interiors_free/48x48/: Interiors Free.tsx
claude_info/: Session-2026-03-16-1930.md
docs/: spritesheet_guide.md
rooms/: 3d_walls.tsx  anim_fountain.tsx  arched_entryways.tsx  art.tsx  baseboards.tsx  basketball_court5.tsx  borders.tsx  city_props.tsx  city_terrain.tsx  classroom_furniture.tsx  floor_connectors.tsx  floor_paths.tsx  floor_shadows.tsx  floors.tsx  furniture_generic.tsx  gym.tsx  high_school_v0.tiled-session  high_school_v0.tmx  home_wood_14x15.tmx  jail.tsx  math_desk_template.tx  modernui_brown.tsx  museum_gray_16x17.tmx  music.tsx  room_builder.tsx  stands.tsx  walls.tsx
src/: main_arcade.py  main_cli.py
src/data/: character_catalog.json  classes.json  events.json  journal_templates.json  names.json  rooms.json  social_text.json  traits.json
src/data/scenarios/: college.json  high_school.json
src/sim/: academics.py  behaviors.py  clock.py  conversation.py  defs.py  engine.py  events.py  game_events.py  journal.py  models.py  needs.py  personality.py  serialization.py  social.py  thoughts.py  traits.py
src/ui/: bitmap_font.py  character_composer.py  font.py  hud.py  room_builder.py  sprites.py
src/ui/views/: campus.py  character_creator.py  day_summary.py  event.py  event_menu.py  event_results.py  landing.py  profile.py  title.py
tests/: test_behaviors.py  test_clock.py  test_engine.py  test_models.py  test_social.py
tools/: simulate.py
