[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-campus"
version = "0.1.0"
description = "A nostalgic pixel-art student life simulator inspired by the Flash-era campus sims of the late 2000s."
requires-python = ">=3.11"
dependencies = []
license = { text = "MIT" }
authors = [{ name = "Kate Louie", email = "katehlouie@gmail.com" }]

[project.optional-dependencies]
gui = ["arcade>=3.0"]
dev = ["pytest", "pytest-cov"]
dist = ["pyinstaller"]

[project.scripts]
pixel-campus-cli = "src.main_cli:main"
pixel-campus = "src.main_arcade:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
